# Travel-Simulation-Query-System

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  TravelSimulation.sln  default  《旅行模拟查询系统》开发文档v0.1.docx  开发文档.md
FDTsFrontend/: index.html  my.js  my.min.js  pack.html  refs.txt  test.html
FDTsFrontend/bs-d3-frontend/: index.html  transmission.html
FDTsFrontend/cpp-backend/: CMakeLists.txt  main.cpp  transmission_protocol.cpp  transmission_protocol.h
FDTsFrontend/js/: moment.min.js
Travel-Simulation-Query-System/: CMakeLists.txt  Graph.cpp  Graph.h  Logger.h  PassengerStatusTable.cpp  PassengerStatusTable.h  PassengerTable.cpp  PassengerTable.h  Permutations.cpp  Permutations.h  TimeTable.cpp  TimeTable.h  Travel-Simulation-Query-System.vcxproj  Travel-Simulation-Query-System.vcxproj.filters  log.txt  logger.cpp  main.cpp  map.txt  map.txt.bak  passengers.txt  passengers.txt.bak  transmission_protocol.cpp  transmission_protocol.h  ws_server.cpp  ws_server.h
document/: 《旅行模拟查询系统》开发文档v0.1.docx  《旅行模拟查询系统》用户使用说明.docx  课程设计2019（旅行模拟）.ppt
